Ctrl+B (Bevel edges) & Ctrl+Shift+B (Bevel vertices) has no clamp option. #42145

Closed
opened 2014-10-08 14:47:57 +02:00 by Adam Preisler · 5 comments

System Information
Win 7

Blender Version
Broken: 2.72 official

Short description of error
It seems that clamp option is missing when bevelling manually. It is possible to use clamp when using a modifier though. Could be very useful to add clamp for Ctrl+B. Same problem with Ctrl+Shift+B - bevel vertices.

Exact steps for others to reproduce the error
Open blender startup scene
Go into edit mode of the cube
Select two edges near each other
Press Ctrl+B or Ctrl+E > Bevel or find it in the T menu in 3D View.
Impossible to enable clamping like in modifier version of beveling, if you use offset of more than 1, edges overlap in an impossible manner.

**System Information** Win 7 **Blender Version** Broken: 2.72 official **Short description of error** It seems that clamp option is missing when bevelling manually. It is possible to use clamp when using a modifier though. Could be very useful to add clamp for Ctrl+B. Same problem with Ctrl+Shift+B - bevel vertices. **Exact steps for others to reproduce the error** Open blender startup scene Go into edit mode of the cube Select two edges near each other Press Ctrl+B or Ctrl+E > Bevel or find it in the T menu in 3D View. Impossible to enable clamping like in modifier version of beveling, if you use offset of more than 1, edges overlap in an impossible manner.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler
Bastien Montagne self-assigned this 2014-10-08 16:18:40 +02:00

This issue was referenced by a62b806d70

This issue was referenced by a62b806d70a8d4f9dacaa55aa32e9b00fee654e2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a62b806d70.

Closed by commit a62b806d70.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42145
No description provided.