Fix T42145: EditMesh Bevel tools had no clamping option.

Missing feature already present in Bevel modifier, useful and rather simple to add.