source/blender/bmesh/operators/bmo_bevel.c
@@ -35,12 +35,13 @@
 
 void bmo_bevel_exec(BMesh *bm, BMOperator *op)
 {
-	const float offset      = BMO_slot_float_get(op->slots_in, "offset");
-	const int   offset_type = BMO_slot_int_get(op->slots_in,   "offset_type");
-	const int   seg         = BMO_slot_int_get(op->slots_in,   "segments");
-	const bool  vonly       = BMO_slot_bool_get(op->slots_in,  "vertex_only");
-	const float profile     = BMO_slot_float_get(op->slots_in, "profile");
-	const int   material    = BMO_slot_int_get(op->slots_in,   "material");
+	const float offset        = BMO_slot_float_get(op->slots_in, "offset");
+	const int   offset_type   = BMO_slot_int_get(op->slots_in,   "offset_type");
+	const int   seg           = BMO_slot_int_get(op->slots_in,   "segments");
+	const bool  vonly         = BMO_slot_bool_get(op->slots_in,  "vertex_only");
+	const float profile       = BMO_slot_float_get(op->slots_in, "profile");
+	const bool  clamp_overlap = BMO_slot_bool_get(op->slots_in,  "clamp_overlap");
+	const int   material      = BMO_slot_int_get(op->slots_in,   "material");
 
 	if (offset > 0) {
 		BMOIter siter;
@@ -61,7 +62,7 @@ void bmo_bevel_exec(BMesh *bm, BMOperator *op)
 			}
 		}
 
-		BM_mesh_bevel(bm, offset, offset_type, seg, profile, vonly, false, false, NULL, -1, material);
+		BM_mesh_bevel(bm, offset, offset_type, seg, profile, vonly, false, clamp_overlap, NULL, -1, material);
 
 		BMO_slot_buffer_from_enabled_hflag(bm, op, op->slots_out, "faces.out", BM_FACE, BM_ELEM_TAG);
 	}
